test/parsing/vass/wrong-unended-string-1.chpl

writeln("Unended double-quoted string